# wikipedia-link-db

./: Cargo.toml  LICENSE  readme.md
.github/workflows/: main.yaml
src/: common.rs  indication.rs  links.rs  lookup.rs  main.rs  pages.rs  redirects.rs  remap.rs  serialize.rs  shortest_path.rs
src/commands/: derive_db.rs  interactive.rs  mod.rs
src/data/: database.rs  links.rs  mod.rs  pages.rs  redirects.rs
src/data/algorithm/: bfs.rs
src/data/maps/: link_map.rs  mod.rs  page_map.rs
src/data/parsers/: common.rs  links.rs  mod.rs  pages.rs  redirects.rs
