[package]
name = "wikipedia-link-db"
version = "0.1.0"
edition = "2021"

[dependencies]
ciborium = "0.2.2"
clap = { version = "4.5.4", features = ["derive"] }
crossbeam-channel = "0.5.13"
env_logger = "0.11.3"
indicatif = "0.17.8"
inquire = "0.7.5"
log = { version = "0.4.21", features = ["std"] }
regex = { version = "1.10.4", features = ["std"] }
serde = { version = "1.0.202", features = ["derive"] }
tempfile = "3.10.1"
